Ibrahim DEV/src/objects/poste__c.object
<CustomObject>
    <fields>
        <fullName>PicklistRecordType2__c</fullName>
        <label>PicklistRecordType2</label>
        <picklist>
            <picklistValues>
                <fullName>value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>value 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PicklistTest__c</fullName>
        <label>PicklistTest</label>
        <picklist>
            <picklistValues>
                <fullName>Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Hand</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>foot</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>foot2</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taux_horaire_via_ech__c</fullName>
        <label>Taux_horaire_via_ech</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>poste</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de po</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>postes</pluralLabel>
    <recordTypes>
        <fullName>RecordType1</fullName>
        <active>true</active>
        <label>RecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2</fullName>
        <active>false</active>
        <label>RecordType2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>